--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /*
  * @Description: 样式文件
- * @Author: dengdong(dengd@esrichina.com.cn)
+ * @Author: travelclover(travelclover@163.com)
  * @Date: 2019-12-25 16:21:54
  */
 
